image not showing fix

--- a/index.css
+++ b/index.css
@@ -2,9 +2,9 @@
 
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image: url(/images/table.jpg);
+    background-image: url(/images/tables.jpg);
     text-align: center;
-    color: #ffffff;
+    color: black;
 }
 
 h1 {
